# xco-mcp-community-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY_BACKPORT_PLAN.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  MANIFEST.in  README.docker.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  XCO_MCP_Server_User_Guide.docx  XCO_MCP_Tier2_Operator_Notes.docx  docker-compose.yml  push.sh.bak  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: lint-test.yml
api/: app.py  docs_routes.py  mcp_transport.py  run.py
docs/: TOOL_CATALOG.md  examples.md
mcp_runtime/: auth.py  catalog_version.py  commit_registry.py  context.py  context_injection.py  context_merge.py  context_resolver.py  context_validator.py  docs_routes.py  error_classify.py  errors.py  explain.py  explain_contract.py  intent_executor.py  intent_normalizer.py  logging.py  metrics.py  mutation_ledger.py  mutation_registry.py  payload_normalize.py  planner.py  policy.py  registry.py  server.py  session.py  session_store.py  tier1_tools.py  tier1_tools.py.bak  tool_capabilities.py  trace.py  tracing.py  transport.py  workflow.py  workflow_schema.py
mcp_runtime/agents/: admin.py  base.py  observer.py  operator.py  registry.py
mcp_runtime/explain/: types.py
mcp_runtime/safety/: envelope.py
openapi/mcp-server/: openapi_mcp_invoke.yaml
openapi/openapi-specs/: openapi (1) auth.json  openapi (2) fabric.json  openapi (3) monitor.json  openapi (4) notification.json  openapi (5) fault.json  openapi (6) rbac.json  openapi (7) snmp.json  openapi (8) tenant.json  openapi (9) system.json  openapi inventory.json
restconf/: __init__.py  client.py  tools.py
scripts/: gen_tool_catalog.py
smoke-test/: results_tier2_a.json  smoke_tier2_a.py  smoke_tier2_b.py  smoke_tier2_c.py  smoke_tier2_d.py  smoke_tier2_e.py  summary_tier2_a.txt
tests/: conftest.py  test_catalog.py  test_catalog_version.py  test_config.py  test_http_endpoints.py  test_payload_normalize.py  test_registry.py  test_tools_mocked.py
tools/: apply_gateway_rules.py  classify_endpoints.py  generate_mcp_tools.py  parse_openapi.py  probe_read_endpoints.py  resolve_endpoints.py  validate_context_samples.py  validate_endpoints.py
tools/auth/: whoami.py
tools/discovery/: list_ids.py
tools/fabric/: bgp_summary.py  efa_command_list.py  errors_summary.py  execution_last_failed.py  execution_recent.py  health_summary.py  health_timeline.py  list_names.py  overview.py  validation_report.py
tools/faultmanager/: active_alarms_top.py  alarm_details_with_context.py  fabric_health_related_alerts.py
tools/firmware/: storage.py
tools/inventory/: chassis_info_bulk.py  device_health_rollup.py  fabric_switches_summary.py  software_version_mismatch.py  switches_widget_table.py  unreachable_devices.py
tools/monitor/: platform_quick_status.py
tools/notification/: last_failed_delivery_or_errors.py  recent_events_filtered.py
tools/restconf_slx/: mac_address_table.py
tools/system/: certificate_alarm_context.py  certificates_expiring_soon.py  diagnostics.py  ha_and_node_health_summary.py
tools/tenant/: all_endpoint_groups.py  service_epg_alarm_summary.py  service_epg_event_logs.py  service_epg_health_summary.py  service_epg_historical_report_stub.py
xco/: client.py
xco-mcp-archive/: legacy_server.py
