[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xco-mcp-server"
version = "1.0.0"
description = "Read-only Model Context Protocol (MCP) server for ExtremeCloud Orchestrator (XCO) and SLX RESTCONF."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Extreme Networks, Inc." }]
keywords = ["mcp", "xco", "extreme-networks", "restconf", "slx", "fastapi", "network-automation"]
classifiers = [
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Networking",
]
dependencies = [
  "fastapi>=0.137.1",
  "uvicorn>=0.40.0",
  "starlette>=1.3.1",
  "mcp>=1.26.0",
  "anyio>=4.12.1",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.28",
  "requests>=2.34.2",
  "httpx>=0.28.1",
  "prometheus-client>=0.24.1",
  "jsonschema>=4.26.0",
  "cryptography>=46.0.7",
  "Markdown>=3.10.2",
  "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "flake8>=7.0",
  "black>=24.0",
]

[project.urls]
Homepage = "https://github.com/YuryOstrovsky/xco-mcp-community-server"
Repository = "https://github.com/YuryOstrovsky/xco-mcp-community-server"
Issues = "https://github.com/YuryOstrovsky/xco-mcp-community-server/issues"

[tool.setuptools]
# The server runs in-place via `api/run.py` (or in Docker). The runtime loads its
# catalog from `./generated/mcp_tools.json` relative to the working directory, so
# deploy by running from the project root or via the provided Docker image.
py-modules = []

# Discover every importable package, including the Tier-2 handler tree (`tools.*`)
# that the runtime imports dynamically. `namespaces = true` picks up the PEP 420
# package dirs that have no __init__.py.
[tool.setuptools.packages.find]
include = ["api*", "mcp_runtime*", "restconf*", "xco*", "tools*"]
namespaces = true

# Ship the generated runtime catalog/data with source installs (sdist via
# MANIFEST.in; the Docker image copies generated/ explicitly).
[tool.setuptools.package-data]
"*" = ["generated/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
# CI black-checks `tests/` only; the legacy tree is not bulk-formatted yet.
# New code should be `black`-clean (run: black tests/ <your-new-files>).

